--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
 
     <!-- External CSS -->
     <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+
 
     <!-- Font -->
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,700,700i" rel="stylesheet">
@@ -34,7 +36,7 @@
 
     <!-- Page-specific (main) content here -->
     <main class="container">
-      <section class="new-tweet">
+      <section class="new-tweet create-tweet">
         <h2>Compose Tweet</h2>
         <hr>
         <form>
@@ -44,7 +46,38 @@
         </form>
       </section>
       <section class="new-tweet">
-        <p>hi</p>
+        <article class="tweet">
+          <header>
+          <img src="https://vanillicon.com/788e533873e80d2002fa14e1412b4188_50.png">
+          <h2 class="name">Bill Fields</h2>
+          <p class="userID">@MrFields</p>
+          </header>
+          <p class="tweet-content">hello</p>
+          <footer>
+            <p class="date">10 days ago</p>
+          </footer>
+        </article>
+
+        <article class="tweet">
+          <header>
+          <img src="https://vanillicon.com/788e533873e80d2002fa14e1412b4188_50.png">
+          <h2 class="name">Bill Fields</h2>
+          <p class="userID">@MrFields</p>
+          </header>
+          <p class="tweet-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+          cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+          proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <footer>
+            <p class="date">10 days ago</p>
+            <i class="fas fa-flag"></i>
+            <i class="fas fa-retweet"></i>
+            <i class="fas fa-heart"></i>
+          </footer>
+        </article>
+
       </section>
     </main>
 
