--- a/public/index.html
+++ b/public/index.html
@@ -55,6 +55,11 @@
           <p class="tweet-content">hello</p>
           <footer>
             <p class="date">10 days ago</p>
+            <div class="icons">
+              <i class="fas fa-flag"></i>
+              <i class="fas fa-retweet"></i>
+              <i class="fas fa-heart"></i>
+            </div>
           </footer>
         </article>
 
@@ -72,9 +77,11 @@
           proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           <footer>
             <p class="date">10 days ago</p>
-            <i class="fas fa-flag"></i>
-            <i class="fas fa-retweet"></i>
-            <i class="fas fa-heart"></i>
+            <div class="icons">
+              <i class="fas fa-flag"></i>
+              <i class="fas fa-retweet"></i>
+              <i class="fas fa-heart"></i>
+            </div>
           </footer>
         </article>
 
