Created a renderTweets function that is responsible for taking in an array of tweet objects then appending each one to a container to display on the webpage

--- a/public/index.html
+++ b/public/index.html
@@ -41,11 +41,11 @@
         <hr>
         <form>
           <textarea name="text" placeholder="What are you humming about?"></textarea>
-          <input type="submit" value="Tweet">
+          <input id="submit" type="submit" value="Tweet">
           <span class="counter">140</span>
         </form>
       </section>
-      <section class="new-tweet">
+      <section class="new-tweet" id="list">
         <article class="tweet">
           <header>
           <img src="https://vanillicon.com/788e533873e80d2002fa14e1412b4188_50.png">
@@ -65,9 +65,9 @@
 
         <article class="tweet">
           <header>
-          <img src="https://vanillicon.com/788e533873e80d2002fa14e1412b4188_50.png">
-          <h2 class="name">Bill Fields</h2>
-          <p class="userID">@MrFields</p>
+            <img src="https://vanillicon.com/788e533873e80d2002fa14e1412b4188_50.png">
+            <h2 class="name">Bill Fields</h2>
+            <p class="userID">@MrFields</p>
           </header>
           <p class="tweet-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
           tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
