Utilized AJAX to perform a post request and submit the text from the textbox to the tweets json file

--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
         <hr>
         <form>
           <textarea name="text" placeholder="What are you humming about?"></textarea>
-          <input id="submit" type="submit" value="Tweet">
+          <input type="submit" value="Tweet">
           <span class="counter">140</span>
         </form>
       </section>
