Created sliding animation for textarea using jquery. Also added code to focus and auto-select the textarea upon loading the page

--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,7 @@
 
     <!-- Page-specific (main) content here -->
     <main class="container">
+      <div id="slidingContent">
       <section class="new-tweet create-tweet">
         <h2>Compose Tweet</h2>
         <hr>
@@ -46,6 +47,7 @@
           <span class="counter">140</span>
         </form>
       </section>
+      </div>
       <section class="new-tweet" id="list">
 
       </section>
