--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
     <!-- External JS -->
     <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
 
+
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/app.js"></script>
     <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
@@ -43,7 +44,7 @@
         <hr>
         <form>
           <textarea name="text" placeholder="What are you humming about?"></textarea>
-          <input type="submit" value="Tweet">
+          <input id="submit" type="submit" value="Tweet">
           <span class="counter">140</span>
           <p id="empty">Error: Cannot submit empty tweet!</p>
           <p id="length">ErrorL Character length Exceeded</p>
