--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
     <nav id="nav-bar">
       <img class="logo" src="/images/bird.png">
       <span class="header">Tweeter</span>
-      <button id="compose"><i class="far fa-edit"></i>Compose</button>
+      <button id="compose"><i class="far fa-edit"></i> Compose</button>
     </nav>
 
     <!-- Page-specific (main) content here -->
@@ -47,7 +47,7 @@
           <input id="submit" type="submit" value="Tweet">
           <span class="counter">140</span>
           <p id="empty">Error: Cannot submit empty tweet!</p>
-          <p id="length">ErrorL Character length Exceeded</p>
+          <p id="length">Error: Character length Exceeded</p>
         </form>
       </section>
       </div>
