--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 
 
     <!-- App CSS -->
-    <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
+    <link rel="stylesheet" href="/css/layout.css" type="text/css" />
 
     <!-- <link rel="stylesheet" type="text/css" href="/styles/nav.css"> -->
 
